0032165: Visualization - remove obsolete method AIS_InteractiveContext::PurgeViewer()